Package: aroma.core
===================

Version: 2.14.0-9000 [2016-01-05]
o Package requires R (>= 3.1.2) and BioC (>= 3.0) both released in
  October 2014.
o BUG FIX: getOutputDataSet(..., onMissing="dropall") for AromaTransform
  would throw error on no applicable method getFullNames() for NULL.
o ROBUSTNESS: Using do.call(fcn) internally instead of do.call("fcn").
o ROBUSTNESS: Using getPathname() instead of accessing private field.
o CLEANUP: Defunct apply() for SampleAnnotationFile; use applyTo().
o CLEANUP: Drop defunct methods.


Version: 2.14.0 [2015-10-20]
o ROBUSTNESS: Explicitly importing core R functions.
o CLEANUP: Renamed apply() for SampleAnnotationFile to applyTo().
o CLEANUP: One rowMads(..., centers) to rowMads(..., center).
o CLEANUP: Drop prototype code never used.
o CLEANUP: Deprecated internal whatDataType() method.
o CLEANUP: Defuncted previously deprecated methods: nbrOfArrays() for
  readData() for AromaMicroarrayDataSetTuple, AromaMicroarrayDataSet and
  AromaUnitTotalCnBinarySet, as well as readData() for SampleAnnotationFile.
o CLEANUP: Removed previously (Feb 2014) defunct method patchPackage()
  and patch().
o BUG FIX: writeRegions(..., format="wig") gave an error.


Version: 2.13.1 [2015-05-25]
o Package now requires R (>= 3.1.1) released July 2014. This allows us
  to use BioC (>= 3.0) (October 2014).
o Relaxed sanity checks; now it's possible to allocate Aroma tabular
  binary files with 200e6 rows (was 100e6 rows).
o getOutputDataSet() for AromaTransform gives more informative error
  messages.
o ROBUSTNESS: exportAromaUnitPscnBinarySet() asserts that no
  duplicated files are returned.
o ROBUSTNESS: Package now declares all S3 methods.
o BUG FIX: getOutputDataSet() for AromaTransform would sometimes given
  an error due to the same output file being identified more than
  once, for instance, when the full name of an output file is also
  the prefix of another file.  Thanks to Benilton Carvalho (Universidade