@@ -2,14 +2,16 @@ Package: aroma.core
 ===================
 
 Version: 2.14.0-9000 [2016-01-05]
+o SPEED: Segmentation methods (e.g. CbsModel) now uses futures, which
+  means that each sample can now be segmented asynchroneously.
 o Package requires R (>= 3.1.2) and BioC (>= 3.0) both released in
   October 2014.
-o BUG FIX: getOutputDataSet(..., onMissing="dropall") for AromaTransform
-  would throw error on no applicable method getFullNames() for NULL.
 o ROBUSTNESS: Using do.call(fcn) internally instead of do.call("fcn").
 o ROBUSTNESS: Using getPathname() instead of accessing private field.
 o CLEANUP: Defunct apply() for SampleAnnotationFile; use applyTo().
 o CLEANUP: Drop defunct methods.
+o BUG FIX: getOutputDataSet(..., onMissing="dropall") for AromaTransform
+  would throw error on no applicable method getFullNames() for NULL.
 
 
 Version: 2.14.0 [2015-10-20]
